set background clip to prevent background bleeding into the border

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -1,5 +1,6 @@
 * {
   padding: 0;
+  background-clip: padding-box;
   -GtkToolButton-icon-spacing: 4;
   -GtkTextView-error-underline-color: @error_color;
   -GtkPaned-handle-size: 1;
